--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,8 +26,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install tox setuptools flake8 pytest
-        pip freeze
+        pip install --upgrade tox setuptools flake8 pytest
+        pip list
     - name: Test with pytest
       run: |
         tox -e py -- ${{ matrix.pytest-args }}
